Fixed the alignments

--- a/styles/custom-css/topTalent.css
+++ b/styles/custom-css/topTalent.css
@@ -36,11 +36,15 @@ body{
    font-size: 40px;
    text-align: center;
 }
+.col-sm-4{
+    margin-top: 5%;
+}
 .bg-none p{
     color: white;
     text-align: center;
     position: absolute;
-    top: 250px;
+    font-size: 24px;
+    top: 260px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -88,6 +92,7 @@ line-height: 24px;
     margin: auto;
     color: black;
     text-decoration: none;
+
 }
 .icons a:hover{
     color: blue;
@@ -143,6 +148,12 @@ height: 2px;
     content: "";
     background: rgba(229, 229, 229, 0.4);
 }
+@media only screen and (max-width:1024px){
+    .name{
+        font-size: 2vw;
+    }
+    
+}
 @media only screen and (max-width: 1000px){
     .address{
         width: 100%;
@@ -155,11 +166,22 @@ height: 2px;
 .nav-item{
     padding-top: 10px;
 }
+.stack{
+    font-size: 2vw;
+}
 
 }
 @media only screen and (max-width: 767px) and (min-width: 580px){
     .thumbnail img{
         width: 130px;
         height: 130px;
+    }
+}
+@media only screen and (max-width: 575px){
+    .name{
+        font-size: 24px;
+    }
+    .stack{
+        font-size: 16px;
     }
 }
